syntax = "proto3";
package walletpb;

message WalletConfig{
    string file_path = 1;
}
